--- a/content/catalog-info.yaml
+++ b/content/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{ values.name | dump }}
+  name: ${{ values.component_id | dump }}
 
   annotations:
     sonarqube.org/project-key: ${{ values.projectKey | dump }}
