changes done to create new template.

--- a/template.yaml
+++ b/template.yaml
@@ -145,8 +145,8 @@ spec:
       name: Create github repositry secret of sonar host url
       action: github:repo:secret
       input:
-        githubToken: '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'
-        repositoryOwner: ${{ parameters.ownerName }}
+        githubToken: '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'
+        repositoryOwner: 'wiseanshul'
         repositoryName: ${{ parameters.repositryName }}
         secretName: 'SONAR_HOST_URL'
         secretValue: 'http://localhost:9000'
@@ -155,7 +155,7 @@ spec:
       name: Create github repositry secret
       action: github:repo:secret
       input:
-        githubToken: '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'
+        githubToken: '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'
         repositoryOwner: ${{ parameters.ownerName }}
         repositoryName: ${{ parameters.repositryName }}
         secretName: 'SONAR_TOKEN'
