changes done to create new template.

--- a/template.yaml
+++ b/template.yaml
@@ -90,6 +90,8 @@ spec:
       action: fetch:template
       input:
           url: ./content
+          copyWithoutRender:
+            - .github/workflows/*
           values:
             component_id: ${{ parameters.component_id }}
             description: ${{ parameters.description }}
