--- a/template.yaml
+++ b/template.yaml
@@ -145,9 +145,9 @@ spec:
       name: Create github repositry secret of sonar host url
       action: github:repo:secret
       input:
-        githubToken: "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"
+        githubToken: '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'
         repositoryOwner: 'wiseanshul'
-        repositoryName: 'springtest1313'
+        repositoryName: 'cccc'
         secretName: 'SONAR_HOST_URL'
         secretValue: '1234'
 
@@ -155,7 +155,7 @@ spec:
       name: Create github repositry secret
       action: github:repo:secret
       input:
-        githubToken: "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"
+        githubToken: "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"
         repositoryOwner: ${{ parameters.ownerName }}
         repositoryName: ${{ parameters.repositryName }}
         secretName: 'SONAR_TOKEN'
