--- a/template.yaml
+++ b/template.yaml
@@ -67,6 +67,10 @@ spec:
           title: owner name
           type: string
           description: enter owner name
+        githubToken:
+          title: github token
+          type: string
+          description: enter github token
 
     - title: create project on sonarqube
       properties:
@@ -145,7 +149,7 @@ spec:
       name: Create github repositry secret of sonar host url
       action: github:repo:secret
       input:
-        githubToken: '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'
+        githubToken: ${{ parameters.githubToken }}
         repositoryOwner: 'wiseanshul'
         repositoryName: 'cccc'
         secretName: 'SONAR_HOST_URL'
