--- a/content/pom.xml
+++ b/content/pom.xml
@@ -23,7 +23,7 @@
 
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-      <sonar.organization>${{ }</sonar.organization>
+      <sonar.organization>${{ values.organizationName }}</sonar.organization>
       <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
